section probmes-mobile

--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -34,6 +34,9 @@ letter-spacing: 0.08em;
 color: #111518;
 position: relative;
 }
+.problem-list{
+    counter-reset: counter;
+}
 .problem-list-item .accent-line::before{
     content: "";
     display: block;
@@ -43,8 +46,9 @@ position: relative;
     color:#FF6B09;
     margin-bottom: 20px;
 }
+
 .problem-list-item .accent-line::after{
-    content: counter(section,decimal-leading-zero);
+    content: counter(section, decimal-leading-zero);
     counter-increment: section;
     position: absolute;
     display: block;
