--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -116,11 +116,13 @@
     margin-bottom: 5px;
   }
 }
+
 @media screen and (min-width: 1344px) {
   .teacher-list-item {
     font-size: 16px;
     line-height: 1.25;
     margin-bottom: 15px;
+    padding-right: 12px;
   }
 }
 
