--- a/src/sass/_registration.scss
+++ b/src/sass/_registration.scss
@@ -102,6 +102,7 @@
      letter-spacing: 0.08em;
      text-transform: uppercase;
      border: none;
+     cursor: pointer;
      color: var(--primary-white-color);
     }
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
