картинка на десктопе в порядке

--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -261,6 +261,7 @@
   }
 
   &__list {
+    position: relative;
     padding: 28px 15px 20px 30px;
     background-color: rgb(255, 255, 255);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
