--- a/src/partials/our-guarantees.html
+++ b/src/partials/our-guarantees.html
@@ -1,48 +1,50 @@
 <section class="our-guarantees">
-    <div class="container">
-        <h1 class="our-guarantees__title">Мы гарантируем</h1>
-        <div class="our-guarantees__bcg">
-            <ul class="our-guarantees__list">
-                <li class="our-guarantees__item">
-                    <div class="our-guarantees__item">
-                        <svg class="our-guarantees__icon_fire">
-                            <use href="./images/sprite.svg#icon-fire"></use>
-                        </svg>
-                    Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании.
-                    Иначе
-                    мы вернем деньги.<span class="our-guarantees__item-accent">*</span>
-                    </div>
-                </li>
-                <li class="our-guarantees__item">
-                    <div class="our-guarantees__item">
-                        <svg class="our-guarantees__icon_fire">
-                            <use href="./images/sprite.svg#icon-fire"></use>
-                        </svg>
-                    Ты научишься писать сочинения минимум на 10 баллов из 14. <span class="our-guarantees__item-accent">В то время как 20%
-                учеников получили за сочинение 0.</span> 
-                    </div>
-                </li>
-                <li class="our-guarantees__item">
-                    <div class="our-guarantees__item">
-                        <svg class="our-guarantees__icon_fire">
-                            <use href="./images/sprite.svg#icon-fire"></use>
-                        </svg>
-                    Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после
-                    формирования команд.
-                    </div>
-                </li>
-                <li class="our-guarantees__item">
-                    <div class="our-guarantees__item">
-                        <svg class="our-guarantees__icon_fire">
-                            <use href="./images/sprite.svg#icon-fire"></use>
-                        </svg>
-                    Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем
-                    особенности каждого ученика.
-                    </div>
-                </li>
-            </ul>
-        </div>
+  <div class="container">
+    <h1 class="our-guarantees__title">Мы гарантируем</h1>
+    <div class="our-guarantees__bcg">
+      <ul class="our-guarantees__list">
+        <li class="our-guarantees__item">
+          <div class="our-guarantees__item">
+            <svg class="our-guarantees__icon_fire">
+              <use href="./images/sprite.svg#icon-fire"></use>
+            </svg>
+            Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+            тестировании. Иначе мы вернем деньги.<span
+              class="our-guarantees__item-accent"
+              >*</span
+            >
+          </div>
+        </li>
+        <li class="our-guarantees__item">
+          <div class="our-guarantees__item">
+            <svg class="our-guarantees__icon_fire">
+              <use href="./images/sprite.svg#icon-fire"></use>
+            </svg>
+            Ты научишься писать сочинения минимум на 10 баллов из 14.
+            <span class="our-guarantees__item-accent"
+              >В то время как 20% учеников получили за сочинение 0.</span
+            >
+          </div>
+        </li>
+        <li class="our-guarantees__item">
+          <div class="our-guarantees__item">
+            <svg class="our-guarantees__icon_fire">
+              <use href="./images/sprite.svg#icon-fire"></use>
+            </svg>
+            Ты будешь заниматься в своем районе. Мы выберем место проведения
+            занятий после формирования команд.
+          </div>
+        </li>
+        <li class="our-guarantees__item">
+          <div class="our-guarantees__item">
+            <svg class="our-guarantees__icon_fire">
+              <use href="./images/sprite.svg#icon-fire"></use>
+            </svg>
+            Команды будут сформированы, исходя из начального уровня учеников. Мы
+            учитываем особенности каждого ученика.
+          </div>
+        </li>
+      </ul>
     </div>
-    
-    
+  </div>
 </section>
