--- a/src/partials/our_guarantees.html
+++ b/src/partials/our_guarantees.html
@@ -1,7 +1,7 @@
 <section class="our-guarantees">
     <h2 class="our-guarantees__title">Мы гарантируем</h2>
     <ul class="our-guarantees__list">
-        <li class="our-guarantees__item">
+        <li class="our-guarantees__item our-guarantees__icon-line">
             <svg class="our-guarantees__icon" width="14" height="20">
                 <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
             </svg>
@@ -9,7 +9,7 @@
             Иначе
             мы вернем деньги.<span class="our-guarantees__slogan">*</span>
         </li>
-        <li class="our-guarantees__item">
+        <li class="our-guarantees__item our-guarantees__icon-line">
             <svg class="our-guarantees__icon" width="14" height="20">
                 <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
             </svg>
@@ -17,14 +17,18 @@
                 20%
                 учеников получили за сочинение 0.</span>
         </li>
-        <li class="our-guarantees__item">
+        <li class="our-guarantees__item our-guarantees__icon-line">
             <svg class="our-guarantees__icon" width="14" height="20">
                 <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
             </svg>
             Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после
             формирования команд.
         </li>
-        <li class="our-guarantees__item">Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем
+        <li class="our-guarantees__item">
+            <svg class="our-guarantees__icon" width="14" height="20">
+                <use href="./icons/our-guarantees-sprite.svg#our-guarantees-fire"></use>
+            </svg> 
+            Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем
             особенности каждого ученика.</li>
     </ul>
 </section>
