--- a/src/sass/layout/_our_guarantees.scss
+++ b/src/sass/layout/_our_guarantees.scss
@@ -27,3 +27,64 @@
 .our-guarantees__item:not(:last-child) {
   margin-bottom: 23px;
 }
+.our-guarantees__item::before {
+  position: absolute;
+  width: 10px;
+  background-color: #f1f1f1;
+  height: 68px;
+  left: -3px;
+  top: 22px;
+}
+.our-guarantees__item {
+  position: relative;
+  padding-left: 17px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 1.667;
+  color: #3d3d3d;
+}
+.our-guarantees__icon-line::before {
+  content: '';
+  background-image: url('../icons/our-guarantees-line.svg');
+  background-repeat: no-repeat;
+}
+.our-guarantees__icon {
+  display: flex;
+  position: absolute;
+  left: -9px;
+  top: -2px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-guarantees__list {
+    background-color: #f1f1f1;
+    width: 688px;
+    margin: 0 auto;
+    padding: 30px 50px;
+  }
+  .our-guarantees__item {
+    padding-left: 25px;
+  }
+  .our-guarantees__item::before {
+    position: absolute;
+    width: 10px;
+    background-color: #f1f1f1;
+    height: 33px;
+    left: -10px;
+    top: 21px;
+  }
+  .our-guarantees__icon {
+    left: -16px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .our-guarantees__list {
+    background-color: #f1f1f1;
+    width: 1314px;
+  }
+  .our-guarantees__item {
+    width: 1000px;
+  }
+}
