changed copyright background parameters and footer files structure

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -65,5 +65,7 @@
       <img class="footer-insta" src="./images/instagram.svg" alt="Инстаграм" />
     </a>
   </div>
-  <p class="copyright">&#x00040; Все права защищены, 2019</p>
+  <div class="copyright-wrapper">
+    <p class="copyright container">&#x00040; Все права защищены, 2019</p>
+  </div>
 </footer>
