--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -120,34 +120,47 @@
   }
 }
 
-.form-field {
-  position: relative;
-}
-
-.form-field:first-child {
-  margin-bottom: 20px;
-
-  @media screen and (min-width: 1344px) {
-    margin-bottom: 30px;
-  }
-}
-
-.form-field:nth-child(2) {
-  margin-bottom: 50px;
+.footer-form {
+  width: 280px;
+  margin: 0 auto;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 31px;
+    width: 390px;
   }
 
   @media screen and (min-width: 1344px) {
-    margin-bottom: 80px;
+    width: 478px;
+  }
+}
+
+.form-field {
+  position: relative;
+
+  &:first-child {
+    margin-bottom: 20px;
+
+    @media screen and (min-width: 1344px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &:nth-child(2) {
+    margin-bottom: 50px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 31px;
+    }
+
+    @media screen and (min-width: 1344px) {
+      margin-bottom: 80px;
+    }
   }
 }
 
 .footer-label {
   position: absolute;
   top: 0;
-  left: 48px;
+  left: 28px;
   transform: translateY(100%);
 
   margin: 0;
@@ -163,11 +176,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  @media screen and (min-width: 768px) {
-    left: 217px;
-  }
   @media screen and (min-width: 1344px) {
-    left: 473px;
     font-size: 20px;
     line-height: 1.2;
   }
@@ -354,7 +363,6 @@
   align-items: center;
 
   color: var(--secondary-text-color);
-  background-color: var(--title-text-color);
 
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -363,7 +371,21 @@
   }
 
   @media screen and (min-width: 1344px) {
-    width: 1344px;
+    width: auto;
     padding-left: 15px;
+  }
+}
+
+.copyright-wrapper {
+  width: 320px;
+  margin: 0 auto;
+  background-color: var(--title-text-color);
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    width: auto;
   }
 }
