--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -13,7 +13,7 @@
     
     background-image: url(../images/problems/campfire.png);
     background-repeat: no-repeat;
-    background-position: right bottom;
+    background-position: left 1088px bottom 0px;    
     background-size: 455px 472px;
     @media screen and (min-device-pixel-ratio: 2),
   screen and (-webkit-min-device-pixel-ratio: 2),
@@ -52,7 +52,7 @@
     letter-spacing: 0.03em;
     color: var(--primary-white-color);
     @media screen and (min-width:768px) {
-    font-size: 26px;        
+    font-size: 26px;            
     }
     @media screen and (min-width:1344px) {
     font-size: 46px;
@@ -67,15 +67,13 @@
     line-height: 1.2;
     letter-spacing: 0.08em;
     color: var(--accent-color);
-    @media screen and (min-width:319px) and (max-width:1343px){
-    &:not(:last-child) {
-    margin-bottom: 5px;}}
+    @media screen and (min-width:319px) and (max-width:1343px){    
+    margin-bottom: 5px;}
     @media screen and (min-width:1344px) {
     font-size: 20px;
     line-height: 1.649;    
-    margin-bottom: 10px;}
-    }    
-
+    margin-bottom: 10px;}}
+    
 .problems-item-text {
     font-weight: 700;
     font-size: 14px;
@@ -96,14 +94,14 @@
 margin-bottom: 10px;}
 }
 @media screen and (min-width:768px) and (max-width:1343px) {
-flex: 1 0 50%;
+flex: 0 0 50%;
 &:nth-child(-n+2){
 margin-bottom: 8px;}
 &:nth-child(n+5) {
  margin-top: 32px;
 }}
 @media screen and (min-width:1344px){
-flex: 1 0 33%;
+flex: 0 0 33%;
 &:nth-child(-n+3){
 margin-bottom: 32px;}   
 }   
@@ -114,5 +112,5 @@ margin-bottom: 32px;}
 flex-wrap: wrap;
 display: flex;
 justify-content: space-between;
-             }}
+}}
 
