fixed container and added some styling

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="products">
-    <div class="container">
-        <p class="second-name">100% natural</p>
-        <h2 class="name-section">products</h2>
+    <div class="container container-products">
+        
+        <h2 class="name-section"><span class="second-name">100% natural</span><br>products</h2>
         <ul class="products-list">
             <li class="products-item">
                 <img class="foto-products" src="./images/products/roze-mob.jpg" 
@@ -9,8 +9,10 @@
                     alt="ice_cream">
                 <h3 class="products-name">ice cream</h3>
                 <div class="doted">
-                    <svg class="" width="50" height="15">* * *
-                        <use href=""></use>
+                    <svg class="doted-svg" width="26" height="6">
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
+                        <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                     </svg>
                 </div>
                 <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -18,8 +20,8 @@
                     incididunt ut labore et. dolore magna
                     aliqua facilisis.
                 </p>
-                <button type="button">
-                    <svg class="" width="20" height="20">
+                <button type="button" class="btn button">
+                    <svg class="" width="10" height="10">
                         <use href="./images/icons/symbol-defs.svg#arrow"></use>
                     </svg>
                 </button>
