--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -1,12 +1,15 @@
 .how-do {
   padding-top: 50px;
   padding-bottom: 50px;
+  background-color: #f1f1f1;
 }
+
 .how-do-title {
   margin-bottom: 30px;
   text-align: center;
   font-weight: 800;
   font-size: 20px;
+  line-height: 1.3;
   letter-spacing: 0.03em;
 }
 .skills-title {
@@ -17,17 +20,19 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
-  margin-bottom: 42px;
+  margin-bottom: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &::after {
     content: ' ';
     position: absolute;
     display: block;
     bottom: -50%;
-    right: 46%;
+    right: 45%;
     width: 20px;
     height: 2px;
     letter-spacing: 0.08em;
     background-color: var(--accent-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
@@ -40,11 +45,13 @@
   color: var(--secondary-text-color);
   padding-left: 2px;
   padding-right: 1px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .how-do-list-item {
   text-align: center;
   background-color: var(--primary-white-color);
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .how-do-list-item:hover,
 .how-do-list-item:focus {
@@ -78,18 +85,18 @@
   height: 48px;
   margin-bottom: 20px;
   fill: var(--accent-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (max-width: 767px) {
   .how-do-title {
     line-height: 1.3;
-
     color: var(--title-text-color);
   }
   .how-do-list-item {
     height: 280px;
     margin: 0 auto;
     padding-top: 30px;
-    padding-bottom: 25px;
+
     padding-left: 5px;
     padding-right: 5px;
     text-align: center;
@@ -100,30 +107,34 @@
     }
   }
 }
+@media screen and (min-width: 768px) {
+  .how-do-list {
+    display: flex;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1343px) {
   .how-do-title {
     font-size: 26px;
     line-height: 1.31;
   }
+
   .how-do-list {
     display: flex;
     flex-wrap: wrap;
-    padding: 0;
-    margin: 0;
     margin-right: -20px;
     margin-bottom: -27px;
-    & > .how-do-list-item {
-      flex-basis: calc(100% / 2 - 20px);
-    }
   }
   .how-do-list-item {
-    width: 334px;
-    height: 334px;
-    padding-top: 40px;
-    padding-left: 15px;
-    padding-right: 15px;
     margin-right: 20px;
     margin-bottom: 27px;
+    flex-basis: calc(100% / 2 - 20px);
+  }
+  .how-do-list-item {
+    max-height: 334px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
 
     &:nth-child(2n) {
       margin-right: 0;
@@ -155,15 +166,16 @@
     margin-bottom: 50px;
   }
   .how-do-list {
-    display: flex;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
     margin-right: -20px;
     margin-bottom: -20px;
-    & > .how-do-list-item {
-      flex-basis: calc(100% / 3 - 20px);
-    }
+  }
+  .how-do-list-item {
+    margin-right: 20px;
+    margin-bottom: 20px;
+    flex-basis: calc(100% / 3 - 20px);
   }
   .how-do-list-item {
     width: 425px;
@@ -171,8 +183,6 @@
     padding-top: 40px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-right: 20px;
-    margin-bottom: 20px;
 
     &:nth-child(3n) {
       margin-right: 0;
