--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -1,4 +1,4 @@
-<section class="registration-section">
+<section class="registration-section" id="registration">
     <div class="container registration">
     <h1 class="registration-title">
         Регистрация на <span class="registration-title_orange">бесплатную</span> телефонную <span
