--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -376,11 +376,12 @@ h3 {
           box-sizing: border-box;
 }
 
-.contacts-card-list {
-  display: block;
-  list-style: none;
-  padding: 0;
-  margin-bottom: 54px;
+@media screen and (min-width: 768px) {
+  .contacts-card-list {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
 }
 
 .contacts-card-item {
@@ -404,6 +405,17 @@ h3 {
   }
   .contacts-card-item:not(:last-child) {
     margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-card-item {
+    width: 220px;
+    font-size: 14px;
+    padding: 50px 30px 50px 30px;
+  }
+  .contacts-card-item:not(:last-child) {
+    margin-right: 20px;
   }
 }
 
