--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -22,13 +22,10 @@
   margin-right: auto;
   margin-left: auto;
   box-sizing: border-box;
-}
 
-.contacts-card-list {
-  display: block;
-  list-style: none;
-  padding: 0;
-  margin-bottom: 54px;
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+  }
 }
 
 .contacts-card-item {
@@ -49,6 +46,16 @@
 
     &:not(:last-child) {
       margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    font-size: 14px;
+    padding: 50px 30px 50px 30px;
+
+    &:not(:last-child) {
+      margin-right: 20px;
     }
   }
 }
