add styles for tablet (program + advantages)

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -97,34 +97,24 @@
             </ul>
         </li>
     </ul>
-    <!-- <picture>
-        <source srcset="images/program/program-desktop.webp 1x, 
-        images/program/program-desktop@2x.webp 2x" type="image/webp"
+
+      <picture class="program-img__wrapper">
+    
+        <source srcset="images/program/program-desktop.png 1x, 
+        images/program/program-desktop@2x.png 2x" type="image/png"
         media="(min-width: 1314px)">
     
-        <source srcset="images/program/program-desktop.jpg 1x, 
-        images/program/program-desktop@2x.jpg 2x" type="image/jpeg"
-        media="(min-width: 1314px)">
-        
-        <source srcset="images/program/program-tablet.webp 1x, 
-        images/program/program-tablet@2x.webp 2x" type="image/webp"
-        media="(min-width: 688px)">
+        <source srcset="images/program/program-tablet.png 1x, 
+        images/program/program-tablet@2x.png 2x" type="image/png"
+        media="(min-width: 768px)">
     
-        <source srcset="images/program/program-tablet.jpg 1x, 
-        images/program/program-tablet@2x.jpg 2x" type="image/jpeg"
-        media="(min-width: 688px)">
+        <source srcset="images/program/program-mobile.png 1x, 
+        images/program/program-mobile@2x.png 2x" type="image/png"
+        media="(max-width: 767px)">
     
-        <source srcset="images/program/program-mobile.webp 1x, 
-        images/program/program-mobile@2x.webp 2x" type="image/webp"
-        media="(max-width: 687px)">
-    
-        <source srcset="images/program/program-mobile.jpg 1x, 
-        images/program/program-mobile@2x.jpg 2x" type="image/jpeg"
-        media="(max-width: 687px)"> -->
-    
-        <!-- <img class="program-img" alt="Проект2"
-        src="images/program/program-mobile.png"/> -->
-      <!-- </picture> -->
-      </div>
+        <img class="program-img" alt="Проект2"
+        src="images/program/program-mobile.png"/>
+      </picture>
+    </div>
     </section>
         
