--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -1,9 +1,3 @@
-.container {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .advantages {
   margin-top: -537px;
   padding-top: 50px;
@@ -11,12 +5,15 @@
 
 .advantages-title {
   margin-bottom: 30px;
-  padding-right: 120px;
   font-weight: 800;
   font-size: 20px;
   line-height: 1.35;
   letter-spacing: 0.03em;
   color: #ffffff;
+
+  @media screen and(max-width: 767px) {
+    padding-right: 120px;
+  }
 }
 
 .advantages-list {
@@ -25,17 +22,18 @@
 }
 
 .advantages-item {
+  width: 236px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.64;
-  //   display: flex;
-  //   align-items: center;
   letter-spacing: 0.08em;
   color: var(--accent-color);
 }
 
-.advantages-item:not(:last-child) {
-  margin-bottom: 20px;
+@media screen and(max-width: 767px) {
+  .advantages-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .advantages-text {
@@ -43,8 +41,34 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 1.43;
-  //   display: flex;
-  //   align-items: center;
   letter-spacing: 0.08em;
   color: var(--main-color);
+}
+
+@media screen and (min-width: 768px) {
+  .advantages {
+    margin-top: -392px;
+    padding-top: 189px;
+  }
+
+  .advantages-title {
+    margin-bottom: 60px;
+    text-align: center;
+    font-size: 26px;
+    line-height: 1.31;
+    letter-spacing: 0.03em;
+  }
+
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0px 118px 25px 98px;
+    margin-left: -20px;
+    margin: -30px;
+  }
+
+  .advantages-item {
+    margin-left: 20px;
+    margin-top: 30px;
+  }
 }
