--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,23 +1,18 @@
-.container {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .program {
   padding-top: 50px;
   padding-bottom: 537px;
   background-color: #000000;
-  background-image: url('../images/program/program-mobile.png');
-  background-repeat: no-repeat;
-  background-size: 120px 137px;
-  background-position: right bottom 440px;
 
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('../images/program/program-mobile@2x.png');
-  }
+  // background-image: url('../images/program/program-mobile.png');
+  // background-repeat: no-repeat;
+  // background-size: 120px 137px;
+  // background-position: right bottom 440px;
+
+  // @media screen and (min-device-pixel-ratio: 2),
+  //   screen and (min-resolution: 192dpi),
+  //   screen and (min-resolution: 2dppx) {
+  //   background-image: url('../images/program/program-mobile@2x.png');
+  // }
 }
 
 .program .container {
@@ -81,6 +76,7 @@
 }
 
 .program-term-list > li {
+  display: inline-block;
   font-weight: 700;
   font-size: 12px;
   line-height: 2.67;
@@ -90,8 +86,10 @@
   text-transform: none;
 }
 
-.program-term-list > li:not(:last-child) {
-  margin-bottom: 8px;
+@media screen and (max-width: 767px) {
+  .program-term-list > li:not(:last-child) {
+    margin-bottom: 8px;
+  }
 }
 
 .program-content-list {
@@ -105,4 +103,76 @@
   letter-spacing: 0.08em;
   color: var(--secondary-color);
   opacity: 0.5;
+}
+
+.program-img {
+  position: absolute;
+  right: 0;
+  bottom: -100px;
+}
+
+@media screen and (min-width: 768px) {
+  .program {
+    padding-top: 60px;
+    padding-bottom: 392px;
+  }
+
+  .program-title {
+    margin-bottom: 52px;
+    font-size: 26px;
+  }
+
+  .program-title::before {
+    width: 712px;
+    top: 92px;
+    left: 93px;
+  }
+
+  .program-list {
+    padding-left: 109px;
+  }
+
+  .program-term-list {
+    display: flex;
+  }
+
+  .program-term-list > li {
+    display: inline-block;
+    align-items: flex-start;
+  }
+
+  .program-list > li:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
+  .program-term-list > li:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  .program-term-list > li:first-child {
+    width: 176px;
+  }
+
+  .program-term-list > li:nth-child(2) {
+    width: 156px;
+  }
+
+  .program-content-list {
+    margin-top: 5px;
+  }
+
+  .program-term::before {
+    content: '';
+    display: inline-block;
+    background-color: var(--accent-color);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin-left: -62px;
+    margin-right: 50px;
+  }
+
+  .program-img {
+    bottom: -139px;
+  }
 }
