--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,4 +1,4 @@
-<!--<section class="problems-section">
+<section class="problems-section">
 <div class="container problems">
     <h1 class="problems-title">Главные проблемы учеников<br>на English ВНО, которые<br> мы <span class="problems-word">помогаем</span>  решить</h1>
     <ul class="problems-list list">
@@ -24,4 +24,4 @@
         </li>
     </ul>
 </div>
-</section>-->
+</section>
