--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,27 +1,27 @@
 <section class="how-made">
 	<div class="container">
-		<h2>tradition and love</h2>
-		<h3>how it’s made?</h3>
+		<h2 class="hw-title">tradition and love</h2>
+		<h3 class="hw-subtitle">how it’s made?</h3>
 		<img src="" alt="корова">
 		<p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
 		<p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
 		<p>Aliquam erat volutpat. Aenean accumsan.</p>
-		<a href="#">Read more </a>
+		<a class="hw-link" href="#">Read more </a>
 		<ul>
 			<li>
-				<img src="#" alt="">
+				<img src="../images/how-made-img/icon1.png" alt="значек">
 				<p>721</p>
-				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
 			</li>
 			<li>
-				<img src="#" alt="">
+				<img src="../images/how-made-img/icon2.png" alt="значек">
 				<p>16kg</p>
-				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
 			</li>
 			<li>
-				<img src="#" alt="">
+				<img src="../images/how-made-img/icon3.png" alt="значек">
 				<p>84</p>
-				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+				<b>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</b>
 			</li>
 		</ul>
 	</div>	
