настраивает бефо и афте

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -23,24 +23,22 @@
             <div class="teacher__right-side">
                 <h3 class="teacher-name">Елена Морева</h3>
                 <ul class="teacher-skill">
-                    <li class="teacher-skill-item">
+                    <li class="teacher-skill-item">Опыт подготовки учеников к ВНО - 6 лет
                         <!--<svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
-                        </svg>-->
-                        <span>Опыт подготовки учеников к ВНО - 6 лет</span>
+                        </svg>-->                        
                     </li>
-                    <li class="teacher-skill-item">
+
+                    <li class="teacher-skill-item">Собственный результат сдачи ВНО - 197 баллов 2 года подряд
                         <!--<svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>-->
-                        <span> Собственный результат сдачи ВНО - 197 баллов 2 года подряд</span>
                     </li>
-                    <li class="teacher-skill-item">
-                        <!--<svg class="teacher__svg">
+
+                    <li class="teacher-skill-item">Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
+                        <!--</1><svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
-                        </svg>-->
-                        <span>Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English
-                            Test)</span>
+                        </svg>-->                        
                     </li>
                 </ul>
                 <ul class="teacher-education">
