--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -49,15 +49,19 @@
       height: 1px;
       background-color: $orange;
       margin-top: 21px;
-      transform: translateX(-20px);
     }
   }
-}
 
-.teacher-skill-item::before {
-  content: '';
-  background-image: url('./icons/teacher-vector.svg');
-  // display: flex;
+  & li::before {
+    content: '';
+    width: 17px;
+    height: 14px;
+    margin-right: 9px;
+    display: inline-block;
+    background-image: url('../icons/teacher-vector.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
 
 .teacher-education {
@@ -86,11 +90,11 @@
   width: 243px;
 }
 
-.teacher__svg {
-  width: 17px;
-  height: 14px;
-  margin-right: 9px;
-}
+//.teacher__svg {
+//  width: 17px;
+//  height: 14px;
+//  margin-right: 9px;
+//}
 
 @media screen and (max-width: 767px) {
   .teacher-img {
@@ -130,11 +134,11 @@
     line-height: 1.233;
   }
 
-  .teaher__svg {
-    width: 24px;
-    height: 20px;
-    margin-right: 35px;
-  }
+  //.teaher__svg {
+  //  width: 24px;
+  //  height: 20px;
+  //  margin-right: 35px;
+  //}
 
   .teacher-skill {
     font-weight: 600;
@@ -148,6 +152,13 @@
         content: '';
         margin-top: 31px;
       }
+    }
+
+    & li::before {
+      content: '';
+      width: 24px;
+      height: 20px;
+      margin-right: 35px;
     }
   }
 
