--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -367,6 +367,13 @@ h3 {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .contacts-card {
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(12%, #ffffff), color-stop(12%, #fff5f675), to(#fff5f675));
+    background-image: linear-gradient(to bottom, #ffffff 12%, #fff5f675 12%, #fff5f675);
+  }
+}
+
 .contacts-card-list {
   display: block;
   width: 100%;
@@ -419,6 +426,17 @@ h3 {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .contacts-card-item {
+    width: 330px;
+    font-size: 16px;
+    padding: 60px 40px 60px 40px;
+  }
+  .contacts-card-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
 .item-header-one,
 .item-header-three {
   margin: 0;
@@ -458,6 +476,12 @@ h3 {
 @media screen and (min-width: 768px) {
   .item-town {
     margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .item-town {
+    margin-top: 35px;
   }
 }
 
@@ -507,6 +531,12 @@ h3 {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .item-town {
+    margin-top: 35px;
+  }
+}
+
 .item-info {
   display: block;
   margin-top: 10px;
@@ -521,6 +551,13 @@ h3 {
   .item-info {
     margin-top: 15px;
     padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .item-info {
+    margin-top: 30px;
+    padding-bottom: 35px;
   }
 }
 
