--- a/src/sass/components/_sale.scss
+++ b/src/sass/components/_sale.scss
@@ -14,6 +14,15 @@
       $card-bcg
     );
   }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(
+      to bottom,
+      $white 12%,
+      $card-bcg 12%,
+      $card-bcg
+    );
+  }
 }
 
 .contacts-card-list {
@@ -58,6 +67,16 @@
       margin-right: 20px;
     }
   }
+
+  @media screen and (min-width: 1200px) {
+    width: 330px;
+    font-size: 16px;
+    padding: 60px 40px 60px 40px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .item-header-one,
@@ -98,6 +117,10 @@
 
   @media screen and (min-width: 768px) {
     margin-top: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 35px;
   }
 }
 
@@ -142,6 +165,9 @@
   @media screen and (min-width: 768px) {
     margin-top: 30px;
   }
+  @media screen and (min-width: 1200px) {
+    margin-top: 35px;
+  }
 }
 
 .item-info {
@@ -157,6 +183,11 @@
   @media screen and (min-width: 768px) {
     margin-top: 15px;
     padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 30px;
+    padding-bottom: 35px;
   }
 }
 
