--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,33 @@
 <section class="hero">
-    
+    <div class="container">
+        <header class="header">
+            <nav class="header-navigation">
+
+                <a class="header-logo" href="#" id="#home">
+                    <img src="./images/hero/logo.svg" alt="header-logo" width="199px" height="50px">
+                </a>
+                <ul class="nav-list">
+                    <li class="nav-list__item"><a href="#home" class="nav-list__link--current">Home</a></li>
+                    <li class="nav-list__item"><a href="#" class="nav-list__link">About us</a></li>
+                    <li class="nav-list__item"><a href="#how-made" class="nav-list__link">How it’s made?</a></li>
+                    <li class="nav-list__item"><a href="#products" class="nav-list__link">Our products</a></li>
+                    <li class="nav-list__item"><a href="#footer" class="nav-list__link">Contact</a></li>
+                </ul>
+
+                <div class="nav-buttons">
+                    <button class="btn-menu-open" type="button" aria-label="Mobile menu open" data-modal-open>
+                        <svg class="menu-open" width="20" height="12">
+                            <use class="icon-open" href="./images/hero/sprite.svg#icon-Burger"></use>
+                        </svg>
+                    </button>
+
+                    <button class="btn-purchase" type="button" aria-label="Button to buy a product">Buy now
+                        <svg>
+                            <use class="btn-buy__icon" href="./images/hero/sprite.svg#icon-Vector"></use>
+                        </svg>
+                    </button>
+                </div>
+            </nav>
+        </header>
+    </div>
 </section>
