--- a/src/sass/layout/_general-problem.scss
+++ b/src/sass/layout/_general-problem.scss
@@ -1,10 +1,5 @@
 .general-problem {
   background-color: $black; //TODO
-
-  $columns: 1;
-  $item-gap-horizontal: 0;
-  $item-gap-vertical: 10px;
-  $padding-left: 96px;
   @extend .container;
   padding-top: 50px;
   & > h2 {
@@ -41,7 +36,9 @@
     background-color: $black;
   }
   @media screen and (min-width: $width-tablet) {
-    padding: 60px 40px 0;
+    padding-top: 60px;
+    padding-left: 40px;
+    padding-right: 40px;
     & > h2 {
       width: 568px;
       @include font(800, 26px, 1.3, left, 0.03em);
@@ -54,16 +51,26 @@
       padding-top: 30px - $item-gap-vertical;
       padding-left: 96px - $item-gap-horizontal;
       padding-bottom: 26px;
+      margin-top: 25px;
       & > li {
         margin-top: $item-gap-vertical;
         margin-left: $item-gap-horizontal;
         flex-basis: calc(100% / #{$columns} - #{$item-gap-horizontal});
+
+        & > h3 {
+          @include font(bold, 20px, 1.2, left, 0.08em);
+        }
+        & > p {
+          @include font(bold, 14px, 1.714, left, 0.08em);
+        }
       }
     }
   }
 
   @media screen and (min-width: $width-desktop) {
     padding-top: 100px;
+    padding-left: 183px;
+    padding-right: 183px;
     & > h2 {
       width: 866px;
       @include font(800, 46px, 1.3, left, 0.03em);
@@ -74,11 +81,21 @@
       $item-gap-horizontal: 40px;
       padding-top: 70px - $item-gap-vertical;
       padding-left: 114px - $item-gap-horizontal;
+      padding-right: 112px;
       padding-bottom: 62px;
+      margin-top: 70px;
       & > li {
         margin-top: $item-gap-vertical;
         margin-left: $item-gap-horizontal;
         flex-basis: calc(100% / #{$columns} - #{$item-gap-horizontal});
+
+        & > h3 {
+          @include font(bold, 20px, 1.649, left, 0.08em);
+        }
+        & > p {
+          @include font(bold, 20px, 1.2, left, 0.08em);
+          margin-top: 10px;
+        }
       }
     }
   }
