header полностью готов + скрипт
добавил скрипт для открытия бургер меню

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -70,14 +70,19 @@
 }
 
 .hero > .container {
-  padding: 30px 20px 0;
-  background-image: url('/images/hero/img-bg-320.png');
-  height: 618px;
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: url('/images/hero/img-bg-320@2x.png');
-    background-size: cover;
+  padding-top: 110px;
+}
+@media screen and (max-width: 767px) {
+  .hero > .container {
+    background-image: url('/images/hero/img-bg-320.png');
+    background-repeat: no-repeat;
+    height: 618px;
+    @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+      screen and (min-resolution: 192dpi) and (max-width: 767px),
+      screen and (min-resolution: 2dppx) and (max-width: 767px) {
+      background-image: url('/images/hero/img-bg-320@2x.png');
+      background-size: cover;
+    }
   }
 }
 @media screen and (min-width: 768px) {
@@ -92,21 +97,18 @@
   .button {
     margin-left: 0;
   }
+  .hero {
+  }
   .hero > .container {
-    padding: 70px 40px 0;
+    padding-top: 158px;
+  }
+  .hero__card {
     position: relative;
-    background-image: url('/images/hero/img-bg-768.png');
-    height: 557px;
-    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 768px),
-      screen and (min-resolution: 2dppx) and (min-width: 768px) {
-      background-image: url('/images/hero/img-bg-768@2x.png');
-    }
   }
   .hero__img {
     position: absolute;
-    top: 83px;
-    right: 18px;
+    top: 13px;
+    left: 332px;
     margin: 0;
     width: 376px;
     height: 320px;
@@ -124,16 +126,31 @@
     }
   }
 }
-@media screen and (min-width: 1680px) {
+@media screen and (min-width: 768px) and (max-width: 1343px) {
   .hero > .container {
-    padding: 125px 184px 10px;
-    background-image: url('/images/hero/img-bg-1680.png');
+    background-image: url('/images/hero/img-bg-768.png');
+    height: 557px;
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1343px),
+      screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1343px),
+      screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1343px) {
+      background-image: url('/images/hero/img-bg-768@2x.png');
+    }
+  }
+}
+@media screen and (min-width: 1344px) {
+  .hero {
+    background-image: url('/images/hero/img-bg-1344.png');
+    background-position: center;
+    background-repeat: no-repeat;
     height: 878px;
     @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-      screen and (min-resolution: 192dpi) and (min-width: 1680px),
-      screen and (min-resolution: 2dppx) and (min-width: 1680px) {
-      background-image: url('/images/hero/img-bg-1680@2x.png');
+      screen and (min-resolution: 192dpi) and (min-width: 1344px),
+      screen and (min-resolution: 2dppx) and (min-width: 1344px) {
+      background-image: url('/images/hero/img-bg-1344@2x.png');
     }
+  }
+  .hero > .container {
+    padding-top: 230px;
   }
   .hero__title {
     font-size: 58px;
@@ -151,23 +168,25 @@
     font-size: 14px;
     line-height: 1.214;
     letter-spacing: 0.14em;
+    margin-top: 40px;
+    padding: 27px 25px;
   }
   .hero__img {
-    top: 46px;
-    right: 46px;
+    top: -79px;
+    left: 610px;
     width: 842px;
     height: 718px;
-    background-image: url('/images/hero/img-02-hero-1680.png'),
-      url('/images/hero/img-01-hero-1680.png');
+    background-image: url('/images/hero/img-02-hero-1344.png'),
+      url('/images/hero/img-01-hero-1344.png');
     background-size: 718px 718px, 842px 602px;
     background-position: top 0 left 81px, top 38px left 0;
   }
   @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi) and (min-width: 1680px),
-    screen and (min-resolution: 2dppx) and (min-width: 1680px) {
+    screen and (min-resolution: 192dpi) and (min-width: 1344px),
+    screen and (min-resolution: 2dppx) and (min-width: 1344px) {
     .hero__img {
-      background-image: url('/images/hero/img-02-hero-1680@2x.png'),
-        url('/images/hero/img-01-hero-1680@2x.png');
+      background-image: url('/images/hero/img-02-hero-1344@2x.png'),
+        url('/images/hero/img-01-hero-1344@2x.png');
     }
   }
 }
