added tablet version

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -31,9 +31,8 @@
                         </svg>
                     </div>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et. dolore magna
-                        aliqua facilisis..</p>
+                        Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
                     <div class="more">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
@@ -68,11 +67,9 @@
                             <circle cx="3" cy="3" r="3" style="fill:white;" />
                         </svg>
                     </div>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut
-                        labore et. dolore magna
-                        aliqua facilisis.</p>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
                     <div class="more">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
@@ -108,11 +105,9 @@
                         </svg>
                     </div>
 
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut
-                        labore et. dolore magna
-                        aliqua facilisis.</p>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, constur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et</p>
                     <div class="more">
                         <svg class="to-right-2" width="10" height="12">
                             <use href="./images/symbol-defs.svg#icon-arrow-right2"></use>
