--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,13 +1,15 @@
 
 .products {
-    padding-top: 122px;
+    padding-top: 121px;
     padding-bottom: 98px;
     background-color: $color-text-white;
+    width: 100%;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 768px) {
+    padding-top: 122px;
     padding-bottom: 112px;
     }
-    @media screen and (min-width: 1200px){
+    @media screen and (min-width: 1280px){
     padding-top: 127px;
     padding-bottom: 119px;
     }
@@ -44,8 +46,8 @@
     margin-bottom: 39px;
     }
 
-    @media screen and (min-width: 1200px) {
-    padding-bottom: 49px;
+    @media screen and (min-width: 1280px) {
+    margin-bottom: 49px;
     
     }
 }
@@ -58,6 +60,7 @@
     justify-content: space-between;
     }
 
+// outline: 1px solid green;
 }
 
 
@@ -72,6 +75,10 @@
     color: $color-text-white;
     text-align: center;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1280px) {
+        margin-bottom: 32px;
+    }
 }
 
 .card-text {
@@ -79,21 +86,37 @@
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
-    line-height: 152%;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 4px;
     color: $color-text-white;
     margin-bottom: 30px;
+    padding-left: 11px;
+    padding-right: 11px;
+    
+    @media screen and (min-width: 1280px) {
+        padding-left: 44px;
+        padding-right: 44px;
+        margin-bottom: 62px;
+    }
 }
 
 
 
 
 .cards-item {
-    width: 280px;
+    width: 220px;
     padding-top: 113px;
     position: relative;
     margin-bottom: 17px;
+
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        width: 280px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 335px;
+    }
 }
 
 
@@ -102,34 +125,46 @@
     border-radius: 24px;
     padding-top: 161px;
     padding-bottom: 41px;
+
+
     
     @media screen and (min-width:768px) {
     width: 220px;
+    padding-top: 152px;
     padding-bottom: 40px;
     }
 
     @media screen and (min-width: 1280px) {
-        width: 350px;
-        padding-bottom: 50px;
+        width: 335px;
+        
+        padding-bottom: 60px;
+        padding-top: 163px;
     }
 }
 
 .products-thumb {
-
+    width: 249px;
     position: absolute;
     top: 113px;
     left: 50%;
     transform: translate(-50%, -50%);
+
     @media screen and (min-width:768px) {
     width: 220px;
+    top: 104px;
+    left: 50%;
+    transform: translate(-50%, -50%);
     }
     @media screen and (min-width: 1280px) {
-    width: 337px;
+    width: 335px;
+    top: 90px;
     }
 }
 .card-img {
     display: block;
     margin: 0px;
+    object-fit: cover;
+
 }
 
 .ice_cream {
