Изменяет стили our-guarantees и feature в мобилке

--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,6 +1,7 @@
 <section class="feature">
     <div class="container">
         <h1 class="visually-hidden">Особенности</h1>
+        <div class="features__wrapper">
             <ul class=”features__list”>
                 <li>
                     <div class="features__item">
@@ -27,5 +28,7 @@
                     </div>
                 </li>
             </ul>
+        </div>
+            
     </div>
 </section>
