--- a/src/sass/layout/_feature.scss
+++ b/src/sass/layout/_feature.scss
@@ -9,13 +9,13 @@
 
 .features__item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   margin-bottom: 30px;
 }
 
 .features__svg {
-  width: 59px;
+  min-width: 59px;
   height: 60px;
   fill: #ff6b09;
 }
