--- a/src/sass/layout/_our-guarantees.scss
+++ b/src/sass/layout/_our-guarantees.scss
@@ -1,37 +1,70 @@
+// .our-guarantees {
+//   background-color: #f1f1f1;
+// }
+
 .our-guarantees__title {
   font-weight: 800;
   font-size: 26px;
   line-height: 1.3;
   letter-spacing: 0.03em;
   color: #111518;
+  // background-color: #ffffff;
   text-align: center;
   padding-bottom: 30px;
 }
 
 .our-guarantees__bcg {
   background-color: #f1f1f1;
+  padding: 30px 20px;
 }
 
 .our-guarantees__item {
+  display: flex;
+  // position: relative;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.666;
   color: #3d3d3d;
-  padding-bottom: 23px;
+  // padding-bottom: 23px;
 
   &::before {
-    display: block;
+    // position: absolute;
     content: '';
-    border: 1px dashed #b9b9b9;
+    border-left: 1px dashed #b9b9b9;
+    // top: 14px;
+    // left: -28px;
+    // width: 1px;
+    height: 68px;
+    margin-top: 20px;
   }
 }
 
+// .our-guarantees__text {
+//   &::before {
+//     content: '';
+//     border: 1px dashed #b9b9b9;
+//     margin-right: 20px;
+//   }
+// }
 .our-guarantees__item-accent {
   color: #ff6b09;
 }
 
 .our-guarantees__icon_fire {
-  width: 14px;
+  // position: relative;
+  max-width: 14px;
   height: 20px;
   fill: #ff6b09;
+  margin-right: 20px;
+  // margin-left: 20px;
+
+  // &::after {
+  //   // position: absolute;
+  //   content: '';
+  //   border-left: 1px dashed #b9b9b9;
+  //   // top: 14px;
+  //   // left: -28px;
+  //   // width: 1px;
+  //   // height: 100%;
+  // }
 }
