our-features/finish

--- a/src/partials/our-features.html
+++ b/src/partials/our-features.html
@@ -1,23 +1,23 @@
 <section class="advantages">
     <div class="container">
-        <ul class="list advantages-list">
-            <li class="advantages-list-item person">
+        <ul class="advantages-list">
+            <li class="advantages-list-item">
                 <svg class="advantages-icon">
-                    <use href="../src/images/sprite.svg#icon-advantages1"></use>
+                    <use href="./images/sprite.svg#Group-1"></use>
                 </svg>
-                <p class="advantages-content">Адаптированная авторская программа ВНО</p>
+                <p class="advantages-text">Адаптированная авторская программа ВНО</p>
             </li>
-            <li class="advantages-list-item mobil">
+            <li class="advantages-list-item">
                 <svg class="advantages-icon">
-                    <use href="../src/images/sprite.svg#icon-advantages2"></use>
+                    <use href="./images/sprite.svg#Group-2"></use>
                 </svg>
-                <p class="advantages-content">Современные методики обучения</p>
+                <p class="advantages-text">Современные методики обучения</p>
             </li>
             <li class="advantages-list-item umbrella">
                 <svg class="advantages-icon">
-                    <use href="../src/images/sprite.svg#icon-advantages3"></use>
+                    <use href="./images/sprite.svg#Group-3"></use>
                 </svg>
-                <p class="advantages-content">Финансовая гарантия результата</p>
+                <p class="advantages-text">Финансовая гарантия результата</p>
             </li>
         </ul>
     </div>
