corrects programme section bg images and reasons section positioning from top:px to transform translateY, removes reasons section desktop heading with visually hidden

--- a/src/sass/layout/_reasons.scss
+++ b/src/sass/layout/_reasons.scss
@@ -1,15 +1,15 @@
 .reasons {
   position: absolute;
   width: 100%;
-  top: 4933px;
   padding-top: 0;
   padding-bottom: 0;
   counter-reset: number;
+  transform: translateY(-760px);
   @media screen and (min-width: $tablet) {
-    top: 3473px;
+    transform: translateY(-455px);
   }
   @media screen and (min-width: $desktop) {
-    top: 4065px;
+    transform: translateY(-520px);
   }
 
   &__heading {
@@ -20,6 +20,18 @@
     @media screen and (min-width: $tablet) {
       max-width: initial;
       text-align: center;
+    }
+    @media screen and (min-width: $desktop) {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
     }
   }
   &-list {
