--- a/src/sass/layout/_programme.scss
+++ b/src/sass/layout/_programme.scss
@@ -19,6 +19,7 @@
 .programme {
   background-color: $text-dark;
   position: relative;
+  overflow: hidden;
   &__heading {
     @include font(800, 20px, 1.3, 0.03em, $white);
     margin-bottom: 43px;
@@ -31,6 +32,46 @@
     @media screen and (min-width: $desktop) {
       margin-bottom: 100px;
       @include font(800, 46px, 1.3, 0.03em, $white);
+    }
+  }
+  > .container:after {
+    content: '';
+    display: block;
+    position: absolute;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 176px;
+    height: 137px;
+    transform: translate(100%, -30%);
+    background-image: url('../images/programme/programme-mobile.png');
+    @media screen and (min-device-pixel-ratio: 2) and (max-width: $tablet - 1),
+      screen and (min-resolution: 192dpi) and (max-width: $tablet - 1),
+      screen and (min-resolution: 2dppx) and (max-width: $tablet - 1) {
+      background-image: url('../images/programme/programme-mobile@2x.png');
+    }
+    @media screen and (min-width: $tablet) and (max-width: $desktop - 1) {
+      background-image: url('../images/programme/programme-tablet.png');
+      width: 384px;
+      height: 280px;
+      transform: translate(100%, -50%);
+    }
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: $tablet) and (max-width: $desktop - 1),
+      screen and (min-resolution: 192dpi) and (min-width: $tablet) and (max-width: $desktop - 1),
+      screen and (min-resolution: 2dppx) and (min-width: $tablet) and (max-width: $desktop - 1) {
+      background-image: url('../images/programme/programme-tablet@2x.png');
+    }
+    @media screen and (min-width: $desktop) {
+      background-image: url('../images/programme/programme-desktop.png');
+      width: 674px;
+      height: 502px;
+      transform: translate(-28%, -50%);
+    }
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: $desktop),
+      screen and (min-resolution: 192dpi) and (min-width: $desktop),
+      screen and (min-resolution: 2dppx) and (min-width: $desktop) {
+      background-image: url('../images/programme/programme-desktop@2x.png');
     }
   }
 }
@@ -186,59 +227,5 @@
     padding-top: 15px;
     padding-bottom: 15px;
     margin-top: -35px;
-  }
-}
-
-@media screen and (min-width: $mobile) and (max-width: $tablet) {
-  .programme {
-    background-image: url('../images/programme/programme-mobile.png');
-    background-repeat: no-repeat;
-    background-size: 120px 135px;
-    background-position: right bottom 440px;
-  }
-}
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: $mobile) and (max-width: $tablet - 1 px),
-  screen and (min-resolution: 192dpi) and (min-width: $mobile) and (max-width: $tablet - 1 px),
-  screen and (min-resolution: 2dppx) and (min-width: $mobile) and (max-width: $tablet - 1 px) {
-  .programme {
-    background-image: url('../images/programme/programme-mobile@2x.png');
-  }
-}
-
-@media screen and (min-width: $tablet) and (max-width: $desktop - 1) {
-  .programme {
-    background-image: url('../images/programme/programme-tablet.png');
-    background-repeat: no-repeat;
-    background-size: 384px 280px;
-    background-position: right bottom 260px;
-  }
-}
-
-
-@media screen and (min-device-pixel-ratio: 2) and (min-width: $tablet) and (max-width: $desktop - 1),
-  screen and (min-resolution: 192dpi) and (min-width: $tablet) and (max-width: $desktop - 1),
-  screen and (min-resolution: 2dppx) and (min-width: $tablet) and (max-width: $desktop - 1) {
-  .programme {
-    background-image: url('../images/programme/programme-tablet@2x.png');
-  }
-}
-
-@media screen and (min-width: $desktop - 1) {
-  .programme {
-    background-image: url('../images/programme/programme-desktop.png');
-    background-repeat: no-repeat;
-    background-size: 760px;
-    background-position: left -88px bottom 58px;
-  }
-  .reasons__heading {
-    display: none;
-  }
-}
-@media screen and (min-device-pixel-ratio: 2) and (min-width: $desktop - 1),
-  screen and (min-resolution: 192dpi) and (min-width: $desktop - 1),
-  screen and (min-resolution: 2dppx) and (min-width: $desktop - 1) {
-  .programme {
-    background-image: url('../images/programme/programme-desktop@2x.png');
   }
 }
